--- a/src/main/webapp/webcontent/web_content_long.xhtml
+++ b/src/main/webapp/webcontent/web_content_long.xhtml
@@ -18,13 +18,13 @@
                             <h:inputText class="form form-control" id="txtName" value="#{webContentController.selected.name}"></h:inputText>
 
                             <h:outputLabel class="form-label" for="txtSinhala"  value="Sinhala" ></h:outputLabel>
-                            <h:inputText  class="form form-control" id="txtSinhala" value="#{webContentController.selected.sinhala}"></h:inputText>
+                            <p:textEditor secure="false" class="form form-control" id="txtSinhala" value="#{webContentController.selected.sinhala}"></p:textEditor>
 
                             <h:outputLabel class="form form-label" for="txtTamil"  value="Tamil" ></h:outputLabel>
-                            <h:inputText  class="form form-control" id="txtTamil" value="#{webContentController.selected.tamil}"></h:inputText>
+                            <p:textEditor  secure="false" class="form form-control" id="txtTamil" value="#{webContentController.selected.tamil}"></p:textEditor>
 
                             <h:outputLabel class="form form-label" for="txtEnglish"  value="English" ></h:outputLabel>
-                            <h:inputText   class="form form-control" id="txtEnglish" value="#{webContentController.selected.english}"></h:inputText>
+                            <p:textEditor  secure="false" class="form form-control" id="txtEnglish" value="#{webContentController.selected.english}"></p:textEditor>
 
                             <h:outputLabel class="form form-label" for="txtOrder"  value="Order No" ></h:outputLabel>
                             <h:inputText class="form form-control" id="txtOrder" value="#{webContentController.selected.orderNo}"></h:inputText>
