Signed-off-by: buddhika <buddhika@vm1.asia-southeast1-b.c.openhmis.internal>

--- a/src/main/webapp/admin/admin_items_index.xhtml
+++ b/src/main/webapp/admin/admin_items_index.xhtml
@@ -13,19 +13,19 @@
                     <div class="col-md-3" >
                         <h:form>
                             <p:accordionPanel  >
-                                <p:tab title="Manage" >
+                                <p:tab title="Items" >
 
                                     <h:commandLink class="btn btn-primary w-100 mb-3"
                                                    action="#{institutionController.toAddNewInstitution()}" 
                                                    >
                                         <i class="bi bi-building-add float-left"></i>
-                                        <span class="float-right">Add New Institution </span>
+                                        <span class="float-right">Add New Investigation</span>
                                     </h:commandLink>
                                     <h:commandLink class="btn btn-primary w-100 mb-3"  
                                                    action="#{institutionController.toListInstitutions()}" 
                                                    >
                                         <i class="bi bi-building-check"></i>
-                                        List Institutions
+                                        List Investigations
                                     </h:commandLink>
 
 
