--- a/src/main/webapp/admin/departments.xhtml
+++ b/src/main/webapp/admin/departments.xhtml
@@ -72,7 +72,7 @@
                                 <h:commandButton class="btn btn-success"  value="Edit" 
                                                  action="#{departmentController.toEditDepartment()}" 
                                                  >
-                                    <f:setPropertyActionListener value="#{item}" target="#{institutionController.current}" >
+                                    <f:setPropertyActionListener value="#{item}" target="#{departmentController.current}" >
                                     </f:setPropertyActionListener>
                                 </h:commandButton>
                                 <h:commandButton class="btn btn-danger"  value="Delete" 
